force-app/main/default/objects/RulePack__mdt/RulePack__mdt.object-meta.xml
<CustomObject>
    <description>A collection of analysis rules for API version upgrade analysis</description>
    <label>Rule Pack</label>
    <pluralLabel>Rule Packs</pluralLabel>
</CustomObject>