force-app/main/default/objects/RulePack__mdt/fields/AppliesToTypes__c.field-meta.xml
<CustomField>
    <fullName>AppliesToTypes__c</fullName>
    <description>Comma-separated list of artifact types this pack applies to</description>
    <label>Applies To Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>