force-app/main/default/objects/RulePack__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this rule pack is enabled</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>