force-app/main/default/objects/RulePack__mdt/fields/MaxApiVersion__c.field-meta.xml
<CustomField>
    <fullName>MaxApiVersion__c</fullName>
    <description>Maximum API version this pack applies to</description>
    <label>Max API Version</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>