force-app/main/default/objects/RulePack__mdt/fields/MinApiVersion__c.field-meta.xml
<CustomField>
    <fullName>MinApiVersion__c</fullName>
    <description>Minimum API version this pack applies to</description>
    <label>Min API Version</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>