force-app/main/default/objects/RulePack__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version of this rule pack</description>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>